examples/undefined_var/expected.txt
error: undefined variable `y`
  --> input:2:9
  |
2 | let x = y + 1
  |         ^ not in scope
